Updated Colab: Linear models

--- a/AnalyticsVidhya.ipynb
+++ b/AnalyticsVidhya.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1wP3dThbBpL4L7K5AtCCSCF1CMdYhce-z",
-      "authorship_tag": "ABX9TyNzhpY3Jd/pTZnq+P9DY9IA",
+      "authorship_tag": "ABX9TyOVukovF6hw9QYHEU+Aq5Cy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5649,6 +5649,75 @@
       ],
       "metadata": {
         "id": "Gyhq9zw9PVLJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We use linear models when there are a corelation between dependent and independent variables. Show a linear pattern. Low MSE = better model.\n",
+        "\n",
+        "```\n",
+        "y = ax + b\n",
+        "```\n",
+        "**Cost Function:** The cost function of a linear regression is mean squared error. If we have a data, we can create a predicted line:\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "```\n",
+        "a = parameter\n",
+        "b = parameter\n",
+        "line = []\n",
+        "for i in range(len(data)):\n",
+        "  line.append(a*data.x[i] + b)\n",
+        "```\n",
+        "We can use mse to calculate error:\n",
+        "\n",
+        "\n",
+        "```\n",
+        "from sklearn.metrics import mean_squared_error as mse\n",
+        "\n",
+        "MSE = mse(data.y, line)\n",
+        "```\n",
+        "Remember: Low MSE = better model. But, How to know the best parameter?. So, for ***a*** parameter:\n",
+        "\n",
+        "\n",
+        "\n",
+        "```\n",
+        "#Range of slopes from 0 to 1.5 with increment of 0.01\n",
+        "slope = [i/100 for i in range(0,150)]\n",
+        "cost = []\n",
+        "for i in slope:\n",
+        "    costtmp = Error(a = i, data = data)\n",
+        "    cost.append(costtmp)\n",
+        "\n",
+        "```\n",
+        "\n",
+        "And Error is a function:\n",
+        "\n",
+        "\n",
+        "\n",
+        "```\n",
+        "def Error(a, data)\n",
+        "  b = 1.1 # still parameter\n",
+        "  y = []\n",
+        "  x = data.x\n",
+        "  for i in range(len(data.x)):\n",
+        "      tmp = a*data.x[i] + b\n",
+        "      y.append(tmp)\n",
+        "  MSE = mse(data.y, y)\n",
+        "  return y\n",
+        "```\n",
+        "Plot a(slope) vs cost\n",
+        "\n",
+        "\n",
+        "Gradient descent is a supervised ML tecnique.\n",
+        "\n",
+        "If there isn't a linear pattern, you can use tramsformation methods to find a pettern (log(x), rootX, squared x). Linear models assume that there isn't correlation between error terms. \n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "zXfjtuNoZf8u"
       }
     }
   ]
