Update logistic regression

--- a/AnalyticsVidhya.ipynb
+++ b/AnalyticsVidhya.ipynb
@@ -4,8 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "mount_file_id": "1wP3dThbBpL4L7K5AtCCSCF1CMdYhce-z",
-      "authorship_tag": "ABX9TyOVukovF6hw9QYHEU+Aq5Cy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5718,6 +5716,15 @@
       ],
       "metadata": {
         "id": "zXfjtuNoZf8u"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Logistic Regression** is used when you have a classification problem, but it leads like a binary variable, so you can use a Sigmoud function."
+      ],
+      "metadata": {
+        "id": "YfOV7v9O4m7W"
       }
     }
   ]
