Issues in linear regression updated

--- a/AnalyticsVidhya.ipynb
+++ b/AnalyticsVidhya.ipynb
@@ -4,6 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "mount_file_id": "1wP3dThbBpL4L7K5AtCCSCF1CMdYhce-z",
+      "authorship_tag": "ABX9TyOLID4/4/t4gY47CGGw+GDD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5542,12 +5544,12 @@
         "    1. Plot the training dataset.\n",
         "    2. Locate the new 'test' instance.\n",
         "    3. Calculate distance from all train data points.\n",
-        "    4. Sort the distance lisnt in acending order.\n",
-        "    5. Choose first k distance from the sorted list.\n",
+        "    4. Sort the distance list in ascending order.\n",
+        "    5. Choose the first k distance from the sorted list.\n",
         "\n",
         "For classification model is mode, for regression model is mean.\n",
         "\n",
-        "Detremine the value of k is done by elbow method, you choose the minimun error (k-value vs error). Like whats the best energy used for that problem.\n",
+        "Determine the value of ***k*** is done by elbow method, you choose the minimun error (k-value vs error). Like whats the best energy used for that problem.\n",
         "\n",
         "How to calculate distance:\n",
         "      \n",
@@ -5712,19 +5714,17 @@
         "Gradient descent is a supervised ML tecnique.\n",
         "\n",
         "If there isn't a linear pattern, you can use tramsformation methods to find a pettern (log(x), rootX, squared x). Linear models assume that there isn't correlation between error terms. \n",
-        "\n"
+        "\n",
+        "**Issues with Linear Regression:** \n",
+        "    1. More features are participating, leads to more coefficients.\n",
+        "    2. Values of coefficinets are large.\n",
+        "    3. Overfitting, performing well on train but not on test dataset.\n",
+        "\n",
+        "Regularization comes to help.\n",
+        "***Ridge regularization***, sum a penalty of parameter wich is square of all coeficients plus mean of squared error. We obtain a linear regression cost function. Nullifiedcoefficients still participate. Create a difficulty in interpretation.\n"
       ],
       "metadata": {
         "id": "zXfjtuNoZf8u"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**Logistic Regression** is used when you have a classification problem, but it leads like a binary variable, so you can use a Sigmoud function."
-      ],
-      "metadata": {
-        "id": "YfOV7v9O4m7W"
       }
     }
   ]
