Desicion tree updated

--- a/AnalyticsVidhya.ipynb
+++ b/AnalyticsVidhya.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1wP3dThbBpL4L7K5AtCCSCF1CMdYhce-z",
-      "authorship_tag": "ABX9TyOLID4/4/t4gY47CGGw+GDD",
+      "authorship_tag": "ABX9TyObv+ZTXtZxhGC0GznfmMZA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5725,6 +5725,51 @@
       ],
       "metadata": {
         "id": "zXfjtuNoZf8u"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**Desicion Tree**"
+      ],
+      "metadata": {
+        "id": "w1qijrrbHCPU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Objective of desicion tree is to have pure nodes. am ideal pure node hace  100% of one class and 0% of other classes.\n",
+        "\n",
+        " The basic idea behind choosing the best split in the data is resultant nodes should be as homogeneous as possible.\n",
+        "\n",
+        "We can split and split and so on, into multiple desicion.\n",
+        "\n",
+        "**Common Terminology:**\n",
+        "\n",
+        "    1. Root node: Representsthe entire population of data.\n",
+        "    2. Splitting: Process to divide a node into 2 or more sub-nodes.\n",
+        "    3. DEsicion node: The inicial node.\n",
+        "    4. Leaf/Terminal node: The final node, Don't split further.\n",
+        "    5. Branch: Sub-tree.\n",
+        "    6. Parent and child node: Higher node is the parent and subnodes are children.\n",
+        "    7. Depth of tree: The length of the longest path for the root node.\n",
+        "\n",
+        "\n",
+        "**Best split point in Desicion Trees**\n",
+        "\n",
+        "1. Desicion tree splits thenodes on all available variables.\n",
+        "2. Selects the split which results in most homogeneous sub-nodes.\n",
+        "\n",
+        "    1. Gini impurity: 1-Gini: If you pick to points from a popular random, they must be from the same class. Lower the gini impurity, higher the homogenety of nodes. Works only with categorical targets.\n",
+        "\n",
+        "              gini = (p1**2+p2**2+p3**2+...)\n",
+        "    \n",
+        "    2. Chi Squared\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "zImxSxg6QV6E"
       }
     }
   ]
