Updated optimizing decision tree

--- a/AnalyticsVidhya.ipynb
+++ b/AnalyticsVidhya.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1wP3dThbBpL4L7K5AtCCSCF1CMdYhce-z",
-      "authorship_tag": "ABX9TyObv+ZTXtZxhGC0GznfmMZA",
+      "authorship_tag": "ABX9TyN2W+aweFAx4rydl7fSpiMR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5758,15 +5758,38 @@
         "\n",
         "**Best split point in Desicion Trees**\n",
         "\n",
-        "1. Desicion tree splits thenodes on all available variables.\n",
+        "1. Desicion tree splits the nodes on all available variables.\n",
         "2. Selects the split which results in most homogeneous sub-nodes.\n",
         "\n",
-        "    1. Gini impurity: 1-Gini: If you pick to points from a popular random, they must be from the same class. Lower the gini impurity, higher the homogenety of nodes. Works only with categorical targets.\n",
+        "    1. **Gini impurity:** 1-Gini: If you pick to points from a popular random, they must be from the same class. Lower the gini impurity, higher the homogenety of nodes. Works only with categorical targets.\n",
         "\n",
         "              gini = (p1**2+p2**2+p3**2+...)\n",
         "    \n",
-        "    2. Chi Squared\n",
-        "\n"
+        "    2. **Chi Squared:** Statistical significance of differences between child nodes and their parent node. Higher chi-squared value, more will be the purity of the nodes after split. works only with categorical values. Can perfomr more than two splits.  \n",
+        "\n",
+        "              chi-squared = (Actual- Expected)**2/ Expected frequencies\n",
+        "    \n",
+        "    3. **Information Gain:** 1 - entropy: If entroy is zero, represents pure node. High information gain means higher the homogeneity of nodes after the split.\n",
+        "\n",
+        "              Entropy = -p1*log2p1-p2*log2p2-p3*log2p3-...pn*log2pn  \n",
+        "\n",
+        "    4. **Reduction in Variance:** Uses standard formula of variance. If variance zero, pure node. Used when target is ***continuous***. Split with lower variance is selected.\n",
+        "\n",
+        "              Variance = sum[(x-mu)**2]/n\n",
+        "              X is the sample\n",
+        "              mu is mean\n",
+        "              n is number of samples\n",
+        "\n",
+        "3. Optimizing performance of Desicion Tree: Higher values controls overfitting. Too high value can lead to underfitting.\n",
+        "      \n",
+        "      1. Set minimum samples for a node split.\n",
+        "      2. Set minumum samples for a terminal node.\n",
+        "      3. Set maximum depth of tree.\n",
+        "      4. set maximum terminal nodes.\n",
+        "\n",
+        "\n",
+        "\n",
+        "What is the maximum number of terminal nodes in a decision tree if our training dataset has N samples? N\n"
       ],
       "metadata": {
         "id": "zImxSxg6QV6E"
