updated optimizing decision tree

--- a/AnalyticsVidhya.ipynb
+++ b/AnalyticsVidhya.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1wP3dThbBpL4L7K5AtCCSCF1CMdYhce-z",
-      "authorship_tag": "ABX9TyN2W+aweFAx4rydl7fSpiMR",
+      "authorship_tag": "ABX9TyNaLFY7p5b9hWXsvdHiZ43t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5730,7 +5730,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#**Desicion Tree**"
+        "#**Decision Tree**"
       ],
       "metadata": {
         "id": "w1qijrrbHCPU"
@@ -5749,7 +5749,7 @@
         "\n",
         "    1. Root node: Representsthe entire population of data.\n",
         "    2. Splitting: Process to divide a node into 2 or more sub-nodes.\n",
-        "    3. DEsicion node: The inicial node.\n",
+        "    3. Decision node: The inicial node.\n",
         "    4. Leaf/Terminal node: The final node, Don't split further.\n",
         "    5. Branch: Sub-tree.\n",
         "    6. Parent and child node: Higher node is the parent and subnodes are children.\n",
@@ -5758,7 +5758,7 @@
         "\n",
         "**Best split point in Desicion Trees**\n",
         "\n",
-        "1. Desicion tree splits the nodes on all available variables.\n",
+        "1. Decision tree splits the nodes on all available variables.\n",
         "2. Selects the split which results in most homogeneous sub-nodes.\n",
         "\n",
         "    1. **Gini impurity:** 1-Gini: If you pick to points from a popular random, they must be from the same class. Lower the gini impurity, higher the homogenety of nodes. Works only with categorical targets.\n",
@@ -5780,7 +5780,7 @@
         "              mu is mean\n",
         "              n is number of samples\n",
         "\n",
-        "3. Optimizing performance of Desicion Tree: Higher values controls overfitting. Too high value can lead to underfitting.\n",
+        "3. Optimizing performance of Decision Tree: Higher values controls overfitting. Too high value can lead to underfitting.\n",
         "      \n",
         "      1. Set minimum samples for a node split.\n",
         "      2. Set minumum samples for a terminal node.\n",
