Update feature engineering

--- a/AnalyticsVidhya.ipynb
+++ b/AnalyticsVidhya.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1wP3dThbBpL4L7K5AtCCSCF1CMdYhce-z",
-      "authorship_tag": "ABX9TyOOj+froAEj2eqb5kBo4cyN",
+      "authorship_tag": "ABX9TyP0gowBA87q9cByDNFu+Rm/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,24 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/AlejandroPinto5/ML-notes-course/blob/main/AnalyticsVidhya.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**MACHINELEARNING BASICS**\n",
+        "\n",
+        "Some models you will learn in this course notes:\n",
+        "\n",
+        "    1. KNN\n",
+        "    2. Linear Regression\n",
+        "    3. Logistic Regression\n",
+        "    4. Decision Tree\n",
+        "\n",
+        "We use some data to build a machine learning model, where the model is basically a function that tries to learn the relationship between dependent variable and independent variable."
+      ],
+      "metadata": {
+        "id": "SZf9fQEA7jJY"
+      }
     },
     {
       "cell_type": "markdown",
@@ -4753,7 +4771,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#**Preprocessing, sorting and agregatingdata**"
+        "#**Preprocessing, sorting and agregating data**"
       ],
       "metadata": {
         "id": "I5bwjOYDSQPs"
@@ -5789,20 +5807,70 @@
         "\n",
         "\n",
         "\n",
-        "What is the maximum number of terminal nodes in a decision tree if our training dataset has N samples? N\n"
+        "What is the maximum number of terminal nodes in a decision tree if our training dataset has N samples? N. Linear regression is parametetric, decision tree is not parametric.\n"
       ],
       "metadata": {
         "id": "zImxSxg6QV6E"
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "#**Feature Enginieering**"
+      ],
       "metadata": {
-        "id": "rPh-OTlnXpRI"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "TtqNk_lh7JuH"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Feature engineering is the process of extracting information from the existing data in order to improve the performance of the model.\n",
+        "\n",
+        "There are two types of:\n",
+        "  1. **Feature Preprocessing:** Updating or transforming existing features.\n",
+        "      1. **Feature Transformation:** is used for transforming non-linear data into linear and also to reduce the skewness of the variable. It's a method used to transform features using maths operations (Log, Square, root, ...). Log transformation is used for removing right skewness from the data. You can do this with: \n",
+        "\n",
+        "              np.sqrt(df['column'])\n",
+        "              np.log(df['column']+0.1) # 0.1 to eliminate error at 0.\n",
+        "        \n",
+        "      2. **Feature Scaling:** Two common ways to scale data: Min Max Scaler and Standard scaler. you can see if MinMax Scaler works with:\n",
+        "\n",
+        "              dfScaled.describe()\n",
+        "\n",
+        "        The Min and Max must be 0 and 1, respectively. Distance based algorithms like k-NN do get affected by the different scaling of the features, hence we always need to scale or normalize our data while working with these algorithms.\n",
+        "\n",
+        "      3. **Feauture One Hot Encoding:** ML doesn't know how to deal categorical values, so you change categorical values with binary values. You can do this with:\n",
+        "\n",
+        "              df.dtypes # to see object data type\n",
+        "              df.['column'].value_counts # to see how many categories we have in a column\n",
+        "              pd.get_dummies(df['column']).head() # to convert categorical values into binary values. \n",
+        "        \n",
+        "          You do this with all categorical columns. But, if you want, you can convert all columns at the same time.\n",
+        "                \n",
+        "                pd.get_dummies(df)\n",
+        "                \n",
+        "          We have some problems with this. Loss of information. You can solve this problem with ***LabelEncoder***:\n",
+        "              \n",
+        "                from sklearn.preprocessing import LabelEncoder\n",
+        "\n",
+        "          And transform ordinal to number variables, i.e. If we have 4 feature like 'small', 'medium' 'large' and 'extra-large'. Label Encoder transform into (0, 1, 2, 3). And solve loss information problem.  Nominal variables are differents. The other problem is number of features increase drastically, you can solve with Combine spare Class.\n",
+        "        \n",
+        "    4.  **Feature Combine Sparse Class:** Spare classes are classes with relative low frequency. We're gonna combine low frequency classes.\n",
+        "                \n",
+        "                df.unique()\n",
+        "                temp = df['column'].value_counts()\n",
+        "                df['column_count'] = df['column'].apply(lambda x: temp[x])\n",
+        "                for i in range(0, len(df))\n",
+        "                  if df['column_count'][i] < 4:\n",
+        "                    df['column'][i] = 'other'\n",
+        "              \n",
+        "\n",
+        "  2. **Feature Generation:** Creating new features.\n"
+      ],
+      "metadata": {
+        "id": "I8ETtLml7T4j"
+      }
     }
   ]
 }
