Updated feature generation

--- a/AnalyticsVidhya.ipynb
+++ b/AnalyticsVidhya.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1wP3dThbBpL4L7K5AtCCSCF1CMdYhce-z",
-      "authorship_tag": "ABX9TyP0gowBA87q9cByDNFu+Rm/",
+      "authorship_tag": "ABX9TyPLhnPmuto8RU/EzF9BfRXf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5856,7 +5856,7 @@
         "\n",
         "          And transform ordinal to number variables, i.e. If we have 4 feature like 'small', 'medium' 'large' and 'extra-large'. Label Encoder transform into (0, 1, 2, 3). And solve loss information problem.  Nominal variables are differents. The other problem is number of features increase drastically, you can solve with Combine spare Class.\n",
         "        \n",
-        "    4.  **Feature Combine Sparse Class:** Spare classes are classes with relative low frequency. We're gonna combine low frequency classes.\n",
+        "      4.  **Feature Combine Sparse Class:** Spare classes are classes with relative low frequency. We're gonna combine low frequency classes.\n",
         "                \n",
         "                df.unique()\n",
         "                temp = df['column'].value_counts()\n",
@@ -5866,7 +5866,22 @@
         "                    df['column'][i] = 'other'\n",
         "              \n",
         "\n",
-        "  2. **Feature Generation:** Creating new features.\n"
+        "  2. **Feature Generation:** Creating new features.\n",
+        "\n",
+        "      1. **Feature Binning:** Binning or discretization is the process of transforming numerical variables into categorical. Separate variables in range.  \n",
+        "\n",
+        "              bins = [0,12,19,...(a range)]\n",
+        "              pd.cut(df['column'], bins)\n",
+        "      \n",
+        "      2.  **Feature Interaction:** Creating columns with arithmetic operations. We can use any number of features or columns while performing feature interaction.\n",
+        "\n",
+        "      3. **Feature Missing Values:** Missing values might have a pattern.\n",
+        "\n",
+        "              df['column'].isnull()*1 # or what you need\n",
+        "\n",
+        "        \n",
+        "\n",
+        "￼\n"
       ],
       "metadata": {
         "id": "I8ETtLml7T4j"
